Compositor: Map Range node shows incorrect tooltip for clamp option #105917

Closed
opened 2023-03-20 11:13:16 +01:00 by Serge Lyatin · 6 comments

System Information
Operating system:
Graphics card:

Blender Version
Worked: Never

Short description of error
Tooltip says result clamps in 0-1 range, when in fact it clamps between output min and max like equivalent nodes from other editors.

Exact steps for others to reproduce the error
In default scene:

  • Open Compositor, add Map Range node, enable Clamp checkbox.
  • Enter numbers outside 0-1 range for output min & max.
**System Information** Operating system: Graphics card: **Blender Version** Worked: Never **Short description of error** Tooltip says result clamps in 0-1 range, when in fact it clamps between output min and max like equivalent nodes from other editors. **Exact steps for others to reproduce the error** In default scene: * Open Compositor, add Map Range node, enable Clamp checkbox. * Enter numbers outside 0-1 range for output min & max.
Serge Lyatin added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-20 11:13:17 +01:00
Iliya Katushenock added the
Meta
Good First Issue
label 2023-03-20 11:25:01 +01:00
Iliya Katushenock changed title from Compositor Map Range node shows incorrect tooltip for clamp option to Compositor: Map Range node shows incorrect tooltip for clamp option 2023-03-20 11:25:17 +01:00

For those who want to do this, the tooltip text can be duplicated from the general version of the node used in other types of node trees.

For those who want to do this, the tooltip text can be duplicated from the general version of the node used in other types of node trees.
Contributor

Hi there,

If I understand well the error is that when hovering the clamp checkbox, tooltip says "Clamp result of the node to 0.0 to 1.0 range" whereas it should be "Clamp result of the node to To Min to To Max range" right ?

Hi there, If I understand well the error is that when hovering the clamp checkbox, tooltip says "Clamp result of the node to 0.0 to 1.0 range" whereas it should be "Clamp result of the node to `To Min` to `To Max` range" right ?

Correct

Correct
Contributor

Ok thanks.

So here we need to get the values set by the user and put them in the tooltip ?

Because I don't remember seeing "dynamic" tooltips in blender (though I never used every section of the software so there might be some).

Edit: My bad I think it's used in some case like the file output node.

Edit: I think I didn't understand well, to solve this, we only need to change the tooltip from "Clamp result of the node to 0.0 to 1.0 range" to something like the general Map Range node : "Clamp the ressult of the node to the target range [To Min, To Max]" ?

Ok thanks. So here we need to get the values set by the user and put them in the tooltip ? Because I don't remember seeing "dynamic" tooltips in blender (though I never used every section of the software so there might be some). Edit: My bad I think it's used in some case like the `file output` node. Edit: I think I didn't understand well, to solve this, we only need to change the tooltip from "Clamp result of the node to 0.0 to 1.0 range" to something like the general `Map Range` node : "Clamp the ressult of the node to the target range [To Min, To Max]" ?

You can just look at the def_map_range in rna_nodetree.c as correct example.

You can just look at the `def_map_range` in `rna_nodetree.c` as correct example.
Contributor

I submitted a PR fixing this issue (#105924).

I hope it is the fix you are expecting.

I submitted a PR fixing this issue (https://projects.blender.org/blender/blender/pulls/105924). I hope it is the fix you are expecting.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-27 16:20:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105917
No description provided.