Fix #105917: Correct compositing map range clamp tooltip

The tooltip of the map range node in the compositing section was displaying that the output value was between 0.0 and 1.0 whereas it is between To Min and To Max value so I just changed the string.

Pull Request: https://projects.blender.org/blender/blender/pulls/105924